--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "hardhat-spdx-license-identifier": "^2.0.3"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^3.4.2",
+    "@openzeppelin/contracts": "^3.4.0-solc-0.7",
     "dotenv": "^10.0.0"
   }
 }
